plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

group 'com.suvankarmitra'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.jfoenix:jfoenix:8.0.8' // Java 8
    compile 'com.jfoenix:jfoenix:9.0.8' // Java 9
    compile group: 'commons-validator', name: 'commons-validator', version: '1.4.0'
}

javafx {
    version = "12.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

startScripts {
    doLast{
        unixScript.text = unixScript.text.replace('DEFAULT_JVM_OPTS=', 'DEFAULT_JVM_OPTS=--module-path ../lib --add-modules javafx.controls,javafx.fxml')
        windowsScript.text = windowsScript.text.replace('DEFAULT_JVM_OPTS=', 'DEFAULT_JVM_OPTS=--module-path ../lib --add-modules javafx.controls,javafx.fxml')
    }
}

mainClassName = 'com.suvankarmitra.MainApp'